--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,65 +80,97 @@ footer{
 }
 footer h2{
     color:var(--secondary-color);
-    font-size: 30px;
+    font-size: 20px;
     margin: 0;
 }
 
 footer div{
     line-height: 1.5;
-    text-align: right;
+    border-right: 1px solid;
 }
 section{
-    padding: 60px;
+    padding: 60px 0;
 }
+.about{
+    display: flex;
+}
+.side{
+   flex:1 12%;
+   border-right: solid 1px var(--tertiary-color)
+}
+.about p{
+    flex: 2 70%;
+    padding: 0 30px ;
+    line-height: 1.2;
+}
+
 .section-title {
     font-size: 20px;
-    border-bottom: 1px solid;
-    color: var(--secondary-color);
-    padding-bottom: 20px;
     text-align: center;
     margin: 0 auto 35 auto;
-    width: 50%;
 }
-.primary-border {
-    border-color: var(--tertiary-color);
+.my-work-section{
+    display: flex;
 }
 .works {
+    flex: 2 70%;
+    padding: 0 30px ;
+    line-height: 1.2;
+}
+
+.work-layout{
+    width: 100%;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    margin-top:2%;
+    justify-content: space-around;
+    flex-direction: column;
+}
+.first-works{
+    flex-grow:2;
+}
+.not-first-works{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    flex:1;
 }
 
-article{
-    background-color:var(--tertiary-color);
+.work{
     border: 1px solid var(--tertiary-color);
     border-radius: 15px;
-    padding: auto;
-    justify-content: space-around;
-    align-items: center;
-    margin: 10px;
+    flex:12;
+    justify-content: space-between;
+    min-width: 400px;
+}  
+.first-work{
+    border: 1px solid var(--tertiary-color);
+    border-radius: 15px;
 }
-.work{
-    flex:1 0 0;
-    padding: 10px;
-    background: var(--primary-color);
-    color: var(--secondary-color);
+.first-work:hover{
+    border: 4px solid lightblue;
+    box-shadow: 5px 5px rgba(221, 218, 218, 0.8);
 }
 
-.work img{
+.work:hover{
+    border: 4px solid lightblue;
+    box-shadow: 5px 5px rgba(221, 218, 218, 0.8);
+}
+.work-img{
     padding: 32px;
     align-self: center;
-    width: 100%;
-    min-width: 400px;
-    max-width: 600px;
+    max-width: 100%;
 }
-
+.first-work img{
+    padding: 32px,auto,0,auto;
+    align-self: center;
+}
 .work-info{
     padding: 32px;
 }
 .work-title{
     font-size: 20px;
-    margin: 20px,0;
+    margin: 0;
 }
 .work-text{
     font-weight: lighter;
@@ -146,3 +178,52 @@ article{
     margin-bottom: 15px;
 }
 
+.contacts{
+    display: flex;
+}
+.contact{
+    flex: 2 70%;
+    padding: 0 30px ;
+    line-height: 1.2;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.contact > * {
+    flex: 1;
+    margin: 15px;
+}
+.contact p, .contact address {
+     margin: 20px 0;
+     line-height: 1.2;
+}
+.contact-form input, .contact-form textarea{
+    border:1px solid var(--tertiary-color);
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: var(--primary-color);
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(221, 218, 218, 0.8);
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255,255,255,1);
+    outline: none;
+}
+.contact-form button{
+    width: 100%;
+    border: none;
+    background-color: var(--tertiary-color);
+    color: var(--primary-color);
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
+    border-radius: 10px;
+}
+.contact-form button:hover{
+    background-color: var(--secondary-color);
+}
