--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,9 +142,8 @@ section{
 .work{
     border: 1px solid var(--tertiary-color);
     border-radius: 15px;
-    flex:12;
+    flex:1 2 50%;
     justify-content: space-between;
-    min-width: 400px;
 }  
 .first-work{
     border: 1px solid var(--tertiary-color);
@@ -242,12 +241,14 @@ section{
         text-align: center;
     }
     header nav li{
-       margin-top:20px;
+        margin-top:10px;
         width: 100%;
         justify-content: center;
+        display: inline-block;
     }
     header nav ul li a {
-        font-size: 20px;
+        font-size: 16px;
+        display: inline-block;
     }
     footer h2, footer div{
         text-align: center;
@@ -270,6 +271,7 @@ section{
     }
     .work{
         min-width: 200px;
+        
     }
     .work-img{
         min-width: none;
