--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,8 +45,7 @@ header a {
 }
 header nav ul {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     list-style: none;
 }
