--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,10 @@ header nav ul li a:hover{
     border-radius: 15px;
     text-shadow: none;
 }
+.banner img
+{
+max-height: 60px;
+display: block;}
 .intro{
     display: flex;
     flex-wrap: wrap;
